--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -10,7 +10,7 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -18,6 +18,7 @@
     <div class="sm:ml-64 bg-image h-screen">
         @!section('content')
     </div>
-    <script src="../assets/script.js"></script>
+    
+    <script src="../script.js"></script>
 </body>
 </html>
