--- a/resources/views/notes.edge
+++ b/resources/views/notes.edge
@@ -1,7 +1,65 @@
 @layout('layouts.main')
 
 @section('content')
-    <div class="flex justify-center items-center h-screen">
+    <div class="lg:flex justify-center items-center h-screen">
+        <div class="unfocused bg-opacity-custom p-6 rounded-lg">
 
+            <div class="relative overflow-x-auto">
+                <table class="w-full text-sm text-left rtl:text-right text-white">
+                    <thead class="text-xs uppercase ">
+                        <tr>
+                            <th scope="col" class="px-6 py-3">
+                                ID
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Potêncial
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Categoria
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Lembrete
+                            </th>
+                            <th scope="col" class="px-6 py-3">
+                                Descrição
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @each(note in notes)
+                            <tr class="border-b">
+                                <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap">
+                                    {{ note . id }}
+                                </th>
+                                <td class="px-6 py-4">
+                                    {{ formatCurrency(note . potential) }}
+                                </td>
+                                <td class="px-6 py-4 {{ getBgColor(note . categorization) }} w-fit rounded-lg">
+                                    {{ note . categorization }}
+                                </td>
+                                <td class="px-6 py-4">
+                                    {{ formatDate(note . reminder) }}
+                                </td>
+                                <td class="px-6 py-4">
+                                    {{ note . description }}
+                                </td>
+                            </tr>
+                        @endeach
+                    </tbody>
+                </table>
+
+                <div>
+                    <div class="w-full flex justify-center items-center text-white gap-2 mt-4">
+                        @each(anchor in notes.getUrlsForRange(1, notes.lastPage))
+                            <a href="{{ anchor . url }}">
+                                {{ anchor . page }}
+                            </a>
+                        @endeach
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
     </div>
 @endsection
